change output image name from omat077/bookmarker-api-jib to omat077/bookmarker-api

--- a/bookmarker-api/pom.xml
+++ b/bookmarker-api/pom.xml
@@ -104,7 +104,7 @@
             <image>eclipse-temurin:17-jre-focal</image>
           </from>
           <to>
-            <image>omar077/bookmarker-api-jib</image>
+            <image>omar077/bookmarker-api</image>
           </to>
           <container>
             <ports>
